--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.85MB/s(Youtube:不良林), server: 129.226.216.150, port: 16984, type: vmess, uuid: 5a964737-0f49-4a42-9a70-b273207ecf5e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-754.6KB/s(Youtube:不良林), server: 129.226.214.30, port: 36067, type: vmess, uuid: 26feaed3-6918-4600-d9cd-45a678d79c3a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.68MB/s(Youtube:不良林), server: 129.226.94.27, port: 23785, type: vmess, uuid: d0771055-cccc-4b79-c4db-d2942f8c9e62, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.25MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-5.20MB/s(Youtube:不良林), server: u4.anmu.one, port: 16199, type: vmess, uuid: 07ec59da-18ad-4224-8ad9-c5a66b1447a9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: 159.223.93.179, port: 80, type: vmess, uuid: 23734aa1-5de0-465f-9662-4f0239b31d9f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.93.179}}
-  - {name: 🇭🇰 香港-784.8KB/s(Youtube:不良林), server: twsxxnjp.158801.xyz, port: 30913, type: trojan, password: 4b5a0665-8936-49ba-9bb7-d1084e35fb79, sni: twsxxnjp.158801.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.48MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-11.88MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.42MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.09MB/s(Youtube:不良林), server: 129.226.217.6, port: 58599, type: vmess, uuid: db312c19-1116-4656-d5d2-8b3adc21f117, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-20.24MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-19.11MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-2.26MB/s(Youtube:不良林), server: 129.226.217.71, port: 24000, type: vmess, uuid: 8155e01b-1b54-410d-9550-555390a90d9d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-11.75MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-8.22MB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.23MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-424.2KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.85MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
