--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.09MB/s(Youtube:不良林), server: 129.226.217.6, port: 58599, type: vmess, uuid: db312c19-1116-4656-d5d2-8b3adc21f117, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-20.24MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-19.11MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇸🇬 新加坡-2.26MB/s(Youtube:不良林), server: 129.226.217.71, port: 24000, type: vmess, uuid: 8155e01b-1b54-410d-9550-555390a90d9d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-11.75MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-8.22MB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.23MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-424.2KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s4.upyun.online, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇸🇬 新加坡-2.14MB/s(Youtube:不良林), server: 129.226.213.30, port: 35006, type: vmess, uuid: 1bdeedc8-ab5d-4d0e-ce89-72a8deb80b64, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-21.33MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.56MB/s(Youtube:不良林), server: 213.183.53.177, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇷🇺 俄罗斯联邦-499.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇷🇺 俄罗斯联邦-3.27MB/s(Youtube:不良林), server: 213.183.53.177, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林), server: 213.183.53.177, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇺🇸 美国-5.62MB/s(Youtube:不良林), server: charge.starspace.link, port: 443, type: trojan, password: 8UnS7eSMi8OFKfje, sni: charge.starspace.link, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-424.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-499.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
